# shrap_firm

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml
docs/: 00-vision.md  01-roadmap.md  02-architecture.md  03-hardware.md  post-launch.md  restart-handoff.md
docs/agents/: README.md  _template.md
docs/agents/development/: implementation-agent.md
docs/agents/intelligence/: filing-processor.md  news-analyzer.md  regime-classifier.md
docs/agents/operations/: audit-logger.md  health-monitor.md
docs/agents/research/: bottleneck-scout.md  hypothesis-generator.md  infrastructure-mapper.md  regime-classifier.md  strategy-evaluator.md  strategy-librarian.md  tech-watcher.md  universe-curator.md
docs/agents/risk-compliance/: pre-trade-checker.md  risk-officer.md
docs/agents/trading-floor/: decision-maker.md  execution-agent.md
docs/audits/: 2026-06-21-paper-spine-audit.md
docs/data/: audit-schema.md  market-data-and-regime-schema.md  paper-order-events-schema.md
docs/decisions/: 0001-redis-streams-message-bus.md  0002-rename-infrastructure-to-platform.md  0003-nautilus-redis-bridge-coverage.md  0004-monitoring-stack.md  0005-alerting-channel.md  0006-redis-event-envelope.md  0007-research-thesis-world-changer-infra.md  0008-research-funnel-open-items.md  0009-research-funnel-boundary-decisions-and-llm-registry.md  0010-research-department-scope-correction.md  0012-tiered-universe.md
docs/infrastructure/: llm-registry.md  llm-routing.md  market-data.md
docs/regimes/: README.md  _features.md  _template.md  crisis-recovery.md  late-cycle-melt-up.md  stagflation.md  wartime.md
docs/research/: bottleneck-archetypes.md  calibration.md  layer-role-taxonomy.md  lite-backwards-test-rubric.md  world-changer-archetypes.md
docs/roadmap/: paper-spine-tree.md
docs/runbooks/: dell-bootstrap.md  spine-smoke.md
docs/sprint-log/: month-1.md
docs/status/: current-sprint.md  decision-queue.md  known-issues.md  recent-changes.md
docs/universe/: README.md  _template.md  aapl.md  lmt.md  nvda.md  qqq.md  spy.md  tsla.md
infra/: .env.example  audit-logger.Dockerfile  decision-maker.Dockerfile  docker-compose.yml  execution-agent.Dockerfile  filing-processor.Dockerfile  health-monitor.Dockerfile  market-data.Dockerfile  market-phase.Dockerfile  news-analyzer.Dockerfile  paper-order-store.Dockerfile  pre-trade-checker.Dockerfile  reconciliation-agent.Dockerfile  regime-classifier.Dockerfile  strategy-fixture.Dockerfile  strategy-librarian.Dockerfile  tech-watcher.Dockerfile  universe-curator.Dockerfile
infra/prometheus/: prometheus.yml
src/shrap/common/: db.py  envelope.py  logging.py  prom_client.py  redis_client.py
src/shrap/events/: __init__.py  groups.py
src/shrap/intelligence/: __init__.py  market_data.py  market_phase.py
src/shrap/llm/: __init__.py  client.py  registry.py
src/shrap/market_data/: __init__.py  backfill.py  client.py  config.py  store.py
src/shrap/operations/: __init__.py  market_phase.py
src/shrap/research/: __init__.py  librarian_service.py  strategy_fixture.py  strategy_registry.py
src/shrap/risk_compliance/: __init__.py  pre_trade.py  pre_trade_checker_agent.py  rate_limit.py  tier3_membership.py
src/shrap/trading_floor/: __init__.py  alpaca.py  decision_maker_service.py  decision_maker_stub.py  execution_agent.py  intent.py  (+6 more)
tests/common/: test_envelope.py
tests/events/: test_events.py  test_groups.py
tests/integration/: test_paper_spine_smoke.py  test_signal_to_risk_path.py
tests/intelligence/: test_filing_processor.py  test_filing_processor_backfill.py  test_news_analyzer.py  test_regime_agent.py  test_regime_classifier.py  test_regime_features.py
tests/llm/: test_tier_client.py
tests/market_data/: test_market_data_backfill.py
tests/operations/: test_market_phase.py
tests/research/: test_librarian_service.py  test_strategy_fixture.py  test_strategy_registry.py  test_tech_watcher_ingest.py  test_tech_watcher_promotion.py  test_tech_watcher_synthesis.py  test_universe_curator_ops.py  test_universe_curator_store.py  test_universe_launch_list.py
tests/risk_compliance/: test_pre_trade.py  test_pre_trade_checker_agent.py  test_pre_trade_checker_config.py  test_rate_limit.py  test_tier3_membership.py
tests/trading_floor/: test_alpaca_client.py  test_decision_maker_service.py  test_decision_maker_stub.py  test_execution_agent.py  test_execution_agent_config.py  test_execution_agent_poison.py  test_execution_agent_repoll.py  test_order_store.py  test_order_store_agent.py  test_paper_intent.py  test_paper_order_store_config.py  test_paper_smoke.py  test_spine_smoke.py
(+101 files in other folders)
