[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shrap"
version = "0.1.0"
description = "Shrap — self-developing multi-agent trading firm"
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { text = "Proprietary" }
authors = [{ name = "Mike" }]
dependencies = [
    "redis>=5.0",
    "httpx>=0.27",
    "structlog>=24.1",
    "pydantic>=2.7",
    "python-ulid>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "fakeredis>=2.24",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/shrap"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
strict = true
files = ["src/shrap"]
python_version = "3.12"
