[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shrap"
version = "0.1.0"
description = "Shrap — self-developing multi-agent trading firm"
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { text = "Proprietary" }
authors = [{ name = "Mike" }]
dependencies = [
    "redis>=5.0",
    "httpx>=0.27",
    "structlog>=24.1",
    "pydantic>=2.7",
    "python-ulid>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "fakeredis>=2.24",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.8",
]
health-monitor = ["pydantic-settings>=2.4"]
audit-logger = ["pydantic-settings>=2.4", "asyncpg>=0.29"]
pre-trade-checker = ["pydantic-settings>=2.4", "asyncpg>=0.29"]
execution-agent = ["pydantic-settings>=2.4"]
paper-order-store = ["pydantic-settings>=2.4", "asyncpg>=0.29"]
reconciliation-agent = ["pydantic-settings>=2.4", "asyncpg>=0.29"]
regime-classifier = ["pydantic-settings>=2.4", "asyncpg>=0.29"]
decision-maker = ["pydantic-settings>=2.4"]
strategy-fixture = ["pydantic-settings>=2.4"]
strategy-librarian = ["pydantic-settings>=2.4", "asyncpg>=0.29"]
tech-watcher = ["pydantic-settings>=2.4", "asyncpg>=0.29"]
news-analyzer = ["pydantic-settings>=2.4", "asyncpg>=0.29"]
filing-processor = ["pydantic-settings>=2.4", "asyncpg>=0.29"]
market-phase = ["pydantic-settings>=2.4", "pandas-market-calendars>=4.4"]
universe-curator = ["pydantic-settings>=2.4", "asyncpg>=0.29"]
spine-smoke = ["asyncpg>=0.29"]

[project.scripts]
shrap-health-monitor = "shrap.agents.operations.health_monitor.__main__:main"
shrap-audit-logger = "shrap.agents.operations.audit_logger.__main__:main"
shrap-pre-trade-checker = "shrap.agents.risk_compliance.pre_trade_checker.__main__:main"
shrap-execution-agent = "shrap.agents.trading_floor.execution_agent.__main__:main"
shrap-paper-order-store = "shrap.agents.trading_floor.paper_order_store.__main__:main"
shrap-reconciliation-agent = "shrap.agents.operations.reconciliation_agent.__main__:main"
shrap-spine-smoke = "shrap.trading_floor.spine_smoke_cli:main"
shrap-regime-classifier = "shrap.agents.intelligence.regime_classifier.__main__:main"
shrap-decision-maker = "shrap.agents.trading_floor.decision_maker.__main__:main"
shrap-strategy-fixture = "shrap.agents.research.strategy_fixture.__main__:main"
shrap-strategy-librarian = "shrap.agents.research.strategy_librarian.__main__:main"
shrap-tech-watcher = "shrap.agents.research.tech_watcher.__main__:main"
shrap-tech-watcher-review = "shrap.research.tech_watcher.review:main"
shrap-news-analyzer = "shrap.agents.intelligence.news_analyzer.__main__:main"
shrap-filing-processor = "shrap.agents.intelligence.filing_processor.__main__:main"
shrap-filing-processor-backfill = "shrap.agents.intelligence.filing_processor.backfill:main"
shrap-market-phase = "shrap.agents.operations.market_phase.__main__:main"
shrap-tech-watcher-promote = "shrap.research.tech_watcher.promotion:main"
shrap-universe-curator = "shrap.agents.research.universe_curator.__main__:main"
shrap-universe-promote = "shrap.research.universe_curator.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/shrap"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
strict = true
files = ["src/shrap"]
python_version = "3.12"

[[tool.mypy.overrides]]
module = ["pandas_market_calendars.*", "pandas.*"]
ignore_missing_imports = true
